--- a/public/style.css
+++ b/public/style.css
@@ -239,6 +239,12 @@ position: absolute !important;
   left: 60% !important;
   top: 50% !important;
 }
+.ui.secondary.pointing.menu {
+  border-bottom: 0 !important
+}
+.men {
+  position: fixed !important
+}
 
 @media only screen and (max-width: 600px) {
   #projectsicon {
